[gd_scene load_steps=4 format=3 uid="uid://cotiewwn08w2w"]

[ext_resource type="Script" path="res://Scenes/UI/gui.gd" id="1_ry0ky"]
[ext_resource type="Script" path="res://Scenes/UI/pause.gd" id="2_0k8vh"]
[ext_resource type="Script" path="res://Scenes/Levels/MainMenu/UsernameEntry.gd" id="4_lbrpa"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_ry0ky")

[node name="Pause" type="Control" parent="." node_paths=PackedStringArray("pause_menu", "pause_button", "main_menu_button", "name_tags_visible_button", "camera_zoom_slider", "googly_button", "perspective_button", "stable_sprite_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_0k8vh")
pause_menu = NodePath("PauseMenu")
pause_button = NodePath("PauseButton")
main_menu_button = NodePath("PauseMenu/PanelContainer/CenterContainer/VBoxContainer/MainMenuButton")
name_tags_visible_button = NodePath("PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer/NameTagsVisibleButton")
camera_zoom_slider = NodePath("PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/CenterContainer/HSlider")
googly_button = NodePath("PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer2/GooglyEyeButton")
perspective_button = NodePath("PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer2/PerspectiveModeButton")
stable_sprite_button = NodePath("PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer2/StableSpriteModeButton")

[node name="PauseButton" type="Button" parent="Pause"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -55.0
offset_bottom = 31.0
grow_horizontal = 0
focus_mode = 0
text = "Pause"

[node name="PauseMenu" type="Control" parent="Pause"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="Pause/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = -221.5
offset_right = 143.5
offset_bottom = 221.5
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Pause/PauseMenu/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/PauseMenu/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 29
text = "Pause Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Resume Game"

[node name="Control2" type="Control" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Settings" type="Label" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="UsernameEntry" type="LineEdit" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter username here"
alignment = 1
expand_to_text_length = true
script = ExtResource("4_lbrpa")

[node name="NameTagsVisibleButton" type="Button" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
toggle_mode = true
text = "Show name tags"

[node name="Control5" type="Control" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Camera Zoom"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Minimum" type="Label" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "0.2"
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 0.2
max_value = 5.0
step = 0.1
value = 1.0
ticks_on_borders = true

[node name="Maximum" type="Label" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "5.0"
vertical_alignment = 1

[node name="Control3" type="Control" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MoreSettings" type="Label" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "More Settings"
horizontal_alignment = 1

[node name="GooglyEyeButton" type="Button" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
toggle_mode = true
text = "Googly eye mode"

[node name="PerspectiveModeButton" type="Button" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
toggle_mode = true
text = "Perspective mode"

[node name="StableSpriteModeButton" type="Button" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
toggle_mode = true
text = "Stable sprite mode"

[node name="Control4" type="Control" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Go to Main Menu"

[connection signal="pressed" from="Pause/PauseButton" to="Pause" method="_on_pause_button_pressed"]
[connection signal="pressed" from="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/ResumeButton" to="Pause" method="_on_resume_button_pressed"]
[connection signal="text_changed" from="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer/UsernameEntry" to="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/VBoxContainer/UsernameEntry" method="_on_text_changed"]
[connection signal="pressed" from="Pause/PauseMenu/PanelContainer/CenterContainer/VBoxContainer/MainMenuButton" to="Pause" method="_on_main_menu_button_pressed"]
